controller_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-service
spec:
  selector:
    app: flask-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
