mutating_admission_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  labels:
    component: mutating-controller
webhooks:
- admissionReviewVersions:
  - v1
  name: test.example.com
  failurePolicy: Fail
  clientConfig:
    url: "https://10.0.2.15:443/mutate/deployments"
    # service:
    #   name: controller-service
    #   namespace: default
    #   path: /mutate/deployments
    # caBundle: <redacted> # a base64 encoded self signed ca cert is needed because all Admission Webhooks need to be on SSL
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM5RENDQWR5Z0F3SUJBZ0lSQUtoUHh5VWowZkdlb09mSWFQcGxuaEF3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TkRBMU1qa3dORFEwTXpCYUZ3MHlOREE1TURZdwpORFEwTXpCYU1BNHhEREFLQmdOVkJBTVRBMjVoYlRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU5yUWFyQXM4UXcrYXVScmVSUzBOSE9kelJVZGUzTTd3MXJNT3NXejAySEFnazYrMmdBL2dJTEMKV3JtWEo2UE9rVGdoc2Y0TDBRSWV0TXFJTTFyY0crRDRYaW5YbDBJVEVTamVPU2dRbnJhVkNGRnNHKzlRblcvSApuanNPMVlpaExTcl [...]
    - apiGroups: ["apps"]
      resources:
        - "deployments"
      apiVersions:
        - "*"
      operations:
        - CREATE
  sideEffects: None
